# sealimg

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  decision.yml  epic.yml  feature.yml
.github/workflows/: ci.yml
design/: data-models.md  test-plan.md  ux-flows.md
docs/: c2pa-notes.md  cli.md  config.md  cryptography.md  data-models.md  faq.md  file-formats.md  github-issues-plan.md  manifest.md  overview.md  quickstart.md  revocation.md  roadmap.md  test-plan.md  ux-flows.md
docs/adr/: 0001-adopt-python.md  0002-crypto-native-plus-gpg.md  0003-master-pixel-preserving-metadata-allowed.md  0004-v0.1-platform-scope-windows-linux.md  0005-work-management-github-issues.md  0006-signature-identity-hybrid.md  0007-metadata-c2pa-staged-hybrid.md  0008-invisible-watermark-payload-modes.md  README.md
docs/integrations/: README.md  (+2 more)
examples/: sample-manifest.json  sample-readme.txt
scripts/: bootstrap_github_project.ps1  bootstrap_github_project.sh
specs/: c2pa-notes.md  invisible-watermark-rationale.md  iptc-xmp-mapping.md
tests/: test_artifacts.py  test_c2pa.py  test_cli.py  test_cli_workflow.py  test_config.py  test_cross_platform_paths.py  test_crypto_native.py  test_golden_fixtures.py  test_gui.py  test_ids_profiles.py  test_manifest.py  test_manifest_snapshot.py  test_metadata_pipeline.py  test_mutation_and_json.py  test_phash.py  test_revocation.py  test_security_output.py  test_watch_and_timestamp.py
(+21 files in other folders)
